tests/sema/pass/nullable_arithmetic_handled.kl
// RUN: check

int main() {
  int? a = 7;
  int? b = null;
  return (a ?: 0) + (b ?: 0);
}
