tests/sema/fail/match_bool_non_exhaustive.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

bool flip(bool b) {
  return b match {
    true => true,
  };
}

int main() {
  return flip(true) ? 1 : 0;
}
